make the download and description stuff of editions mobile friendly

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -33,6 +33,12 @@
 
           </div>
         </div>
+        <div class="col-xs-12 h-caption text-justify top-margin liveusb productdesc workstation visible-xs">
+            <h4>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</h4>
+            <p class="text-center uppercase">
+              <a role="button" href="../${lang}/workstation/download" class="btn btn-edition">Download now</a>
+            </p>
+        </div>
         <div class="col-sm-4 col-xs-12 productitem server">
           <div class="edition-logo">
           <a href="../${lang}/server">
@@ -41,6 +47,12 @@
           </a>
           <a href="../${lang}/server/download">Download Now</a>
           </div>
+        </div>
+        <div class="col-xs-12 h-caption text-justify top-margin liveusb productdesc server visible-xs">
+            <h4>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</h4>
+            <p class="text-center uppercase">
+              <a role="button" href="../${lang}/server/download" class="btn btn-edition">Download now</a>
+            </p>
         </div>
         <div class="col-sm-4 col-xs-12 productitem atomic">
           <div class="edition-logo">
@@ -51,8 +63,17 @@
           <a href="../${lang}/cloud/download">Download Now</a>
           </div>
         </div>
+        <div class="col-xs-12 h-caption text-justify top-margin productdesc cloud visible-xs">
+            <h4>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</h4>
+            <p class="text-center uppercase bottom-space">
+              <a role="button" href="../${lang}/cloud/download" class="btn btn-edition">Download now</a>
+            </p>
+        </div>
       </div>
-      <div class="row">
+
+      <div class="visible-xs col-xs-12 blue-pattern-box"></div>
+
+      <div class="row hidden-xs">
 	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
 	       <hr />
 	    </div>
@@ -63,29 +84,20 @@
 		   <hr />
 	    </div>
       </div>
-      <div class="row">
+      <div class="row hidden-xs">
         <div class="col-sm-4 col-xs-12 productdesc workstation">
           <div class="h-body text-justify liveusb">
             <h4>Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.</h4>
-            <p class="visible-xs text-center uppercase">
-              <a role="button" href="../${lang}/workstation/download" class="btn btn-edition">Download now</a>
-            </p>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productdesc server">
           <div class="h-body text-justify liveusb">
             <h4>Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.</h4>
-            <p class="visible-xs text-center uppercase">
-              <a role="button" href="../${lang}/server/download" class="btn btn-edition">Download now</a>
-            </p>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 productdesc cloud">
           <div class="h-body text-justify">
             <h4>Fedora Cloud provides a minimal image of Fedora for use in public and private cloud environments. It includes just the bare essentials making it very light on resources, but you get enough to run your cloud application.</h4>
-            <p class="visible-xs text-center uppercase bottom-space">
-              <a role="button" href="../${lang}/cloud/download" class="btn btn-edition">Download now</a>
-            </p>
           </div>
         </div>
       </div>
