add Camerons slogan and img-circle

--- a/getfedora.org/data/content/cloud/index.html
+++ b/getfedora.org/data/content/cloud/index.html
@@ -14,9 +14,9 @@
   <header id="head">
     <div class="container cloud">
       <div class="row">
-        <div class="col-sm-6 col-md-offset-1 text-left">
-          <h1>${_('Lean. Powerful. Everycloud ready.')}</h1>
-          <h4>${_('Build scale-out computing and utilize the next generation of container deployment with Fedora Cloud')}</h4>
+        <div class="col-sm-8 col-md-offset-1 text-left">
+          <h1>${_('Deploy and scale your containerized applications with immutable infrastructure.')}</h1>
+          <h4>${_('Fedora Atomic provides the best platform for your Linux-Docker-Kubernetes (LDK) application stack.')}</h4>
         </div>
       </div>
       <div class="row">
@@ -36,8 +36,8 @@
         </div>
         <div class="col-sm-8">
           <blockquote>
-            <p>${Markup(_('&ldquo;Fedora %(rel)s gives me the balance I\'m looking for &mdash; a leading edge operating system with enterprise-level tools for fast provisioning and configuration.&rdquo;')) % {'rel':global_variables.release['curr_id']}}</p>
-            <footer><cite>Major Hayden, ${_('Principal Architect at Rackspace')}</cite></footer>
+            <p>${Markup(_('&ldquo;We chose to use Fedora Atomic as the base for our Navops Launch &mdash; Kubernetes cluster provisioning solution because our customers trust and already run Red Hat operating systems. We love the immutable aspect of Fedora Atomic which is perfect for containerized environments.&rdquo;'))}</p>
+            <footer><cite>Cameron Brunner, ${_('Chief Architect, Navops by Univa')}</cite></footer>
           </blockquote>
         </div>
       </div>
