add Atomic Host feature

--- a/getfedora.org/data/content/cloud/index.html
+++ b/getfedora.org/data/content/cloud/index.html
@@ -44,6 +44,19 @@
     </div>
   </div>
 
+   <!-- Feature: Atomic Host -->
+  <div class="jumbotron product-feature atomic-host">
+    <div class="container">
+      <div class="row bottom-margin">
+      <div class="col-sm-6 col-sm-offset-1 caption">
+        <h2>${_('Atomic Host')}</h2>
+        <p>${_('Atomic Host from Project Atomic is a lightweight, immutable platform, designed with the sole purpose of running containerized applications.')}</p>
+        <p>${_('Fedora\'s version of Atomic Host uses the same package repositories as Fedora Server, and provides the latest versions of the Atomic.')}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Feature: Base -->
   <div class="jumbotron product-feature base minimalfastflexible" style="background-color: #7bcf3e;">
     <div class="container">
