--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -208,10 +208,23 @@
       <!-- Start Vagrant -->
         <div class="row">
             <div class="col-xs-12 top-margin">
-              <h3>${_('Base Cloud Images for Vagrant')}</h3>
-              <p>${_('These images are Vagrant Boxes images for deployment using Vagrant.')}</p>
+              <h3>${_('Atomic Host Images for Vagrant')}</h3>
+                <p>${_('Vagrant Boxes for Fedora Atomic Host are available for the VirtualBox and Libvirt providers. You can bring up Fedora Atomic Host in a vagrant box by running:')}</p>
+                <pre>docker load -i Fedora-Docker-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_build']}.x86_64.tar.xz</pre>
+                <p>${_('If you\’ve previously used vagrant to run a Fedora Atomic 24 VM, first ensure that you have the latest version by running:')}</p>
+                <pre>vagrant box update --box=fedora/${global_variables.release['curr_id']}-atomic-host</pre>
+                <p>${_('If you need to download images for Vagrant, you may click the button below to reveal the image download links.')}</p>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
         <!-- Mobile -->
         <div class="row visible-xs">
           <div class="col-xs-12">
